--- a/views/restricted/Admin.ejs
+++ b/views/restricted/Admin.ejs
@@ -4,11 +4,11 @@
 	<div class="container admin-panel">
         <h1 class="square-title text-center">Admin Panel</h1>
         <div class="row justify-content-center">
-            <a class="admin-section-block col-lg-3" href="/Admin/Orders">Orders</a>
+            <a class="admin-section-block col-lg-3" href="/Admin/Orders">Commandes</a>
             <a class="admin-section-block col-lg-3" href="/Admin/Galerie/Post">Galerie</a class="admin-section-block col-3">
-            <a class="admin-section-block col-lg-3" href="/Admin/Shop/Post">Shop</a class="admin-section-block col-3">
+            <a class="admin-section-block col-lg-3" href="/Admin/Shop/Post">Boutique</a class="admin-section-block col-3">
             <a class="admin-section-block col-lg-3" href="/Admin/Blog/Post">Blog</a class="admin-section-block col-3">
-            <a class="admin-section-block col-lg-3" href="/Admin/Front">Home</a class="admin-section-block col-3">
+            <a class="admin-section-block col-lg-3" href="/Admin/Front">Accueil</a class="admin-section-block col-3">
             <a class="admin-section-block col-lg-3" href="/Admin/Bio">Bio</a class="admin-section-block col-3">
         </div>
     </div>
