--- a/views/single/Order-recap.ejs
+++ b/views/single/Order-recap.ejs
@@ -14,9 +14,9 @@
 				<h4>Total Price - <b><%= locals.order.price %>€</b></h4>
 
 				<% if (locals.deliveryPriceFormatted != "0.00") { %>
-				<h4>Shipping Price - <b><%= locals.deliveryPriceFormatted %>€</b></h4>
+				<h4>Shipping - <b><%= locals.deliveryPriceFormatted %>€</b></h4>
 				<% } else { %>
-				<h4>Shipping Price - <b>FREE</b></h4>
+				<h4>Shipping - <b>FREE</b></h4>
 				<% } %>
 			</div>
 
