--- a/public/style.css
+++ b/public/style.css
@@ -40,6 +40,10 @@
 	--light-shade-p1: #d6d6d6;
 }
 
+a {
+	color: #0066ff;
+}
+
 .full-container {
 	flex: 1;
 	background: linear-gradient(to bottom, var(--primary-light), var(--primary-dark));
@@ -47,6 +51,7 @@
 
 .full-container .square-title {
 	color: var(--light-shade);
+	text-shadow: 2px 2px var(--brand-blue);
 }
 
 .full-container.even {
@@ -181,7 +186,7 @@
 
 .alert-info {
 	color: var(--brand-blue-p2);
-	background-color: #68adde;
+	background-color: #70c4ff;
 	border-color: var(--brand-blue-p2);
 }
 .alert-success {
@@ -407,7 +412,8 @@ header:hover {
 	box-shadow: 0px -1px 10px 0px rgba(0, 0, 0, 0.75);
 }
 header:hover .navbar-container .navbar-custom .logo,
-header:hover .navbar-container .navbar-custom .nav-links li a {
+header:hover .navbar-container .navbar-custom .nav-links li a,
+header:hover .navbar-container .navbar-custom .nav-links #cart-qty-li a {
 	color: var(--brand-blue-m1);
 }
 .hamburger {
@@ -482,7 +488,7 @@ header:hover .navbar-container .navbar-custom .nav-links li a {
 }
 
 #cart-qty-li a {
-	color: var(--brand-blue-p2);
+	color: var(--light-shade);
 }
 
 .logo:hover {
@@ -501,8 +507,8 @@ header:hover .navbar-container .navbar-custom .nav-links li a {
 
 #cartQty {
 	font-weight: bold;
-	color: var(--light-shade);
-	background-color: var(--brand-blue-p2);
+	color: var(--primary-dark);
+	background-color: var(--light-shade);
 	padding: 5px 9px;
 	border-radius: 50%;
 	-webkit-box-shadow: 0px 0px 5px 0 rgba(86, 86, 86, 0.75);
@@ -535,7 +541,7 @@ header:hover .navbar-container .navbar-custom .nav-links li a {
 }
 
 .anchor-list {
-	background: var(--light-shade);
+	background: var(--light-shade-m1);
 	position: fixed;
 	width: 100%;
 	z-index: 99;
@@ -573,7 +579,7 @@ header:hover .navbar-container .navbar-custom .nav-links li a {
 
 /* FOOTER */
 footer {
-	height: 33px;
+	min-height: 33px;
 	width: 100%;
 }
 
@@ -605,14 +611,9 @@ footer {
 }
 
 .footer-copyright {
-	font-size: 17px;
+	font-size: 1.1em;
 	color: var(--light-shade-m1);
 	min-height: 33px;
-	background-color: var(--brand-blue-p1) !important;
-	border-top: 2px solid var(--brand-blue-p2);
-	-webkit-box-shadow: 0px -1px 20px 0px rgba(0, 0, 0, 0.35);
-	-moz-box-shadow: 0px -1px 20px 0px rgba(0, 0, 0, 0.35);
-	box-shadow: 0px -1px 20px 0px rgba(0, 0, 0, 0.35);
 }
 
 .footer-logo {
@@ -627,21 +628,21 @@ footer {
 	background: var(--light-shade);
 	margin: 10px;
 	border-radius: 30%;
-	-webkit-box-shadow: 0 5px 30px -3px var(--brand-blue-p1);
-	-moz-box-shadow: 0 5px 30px -3px var(--brand-blue-p1);
-	box-shadow: 0 5px 30px -3px var(--brand-blue-p1);
-	color: var(--brand-blue-m1);
+	-webkit-box-shadow: 0 5px 30px -3px var(--primary-dark);
+	-moz-box-shadow: 0 5px 30px -3px var(--primary-dark);
+	box-shadow: 0 5px 30px -3px var(--primary-dark);
+	color: var(--primary-light);
 	overflow: hidden;
 	position: relative;
 	text-align: center;
 }
 
 .social-btn:hover {
-	background-color: var(--brand-blue-p2);
+	background-color: var(--secondary-light);
 }
 
 .social-btn i {
-	color: var(--brand-blue-m2);
+	color: var(--secondary-light);
 	line-height: 50px;
 	font-size: 30px;
 	transition: 0.2s linear;
@@ -649,7 +650,7 @@ footer {
 
 .social-btn:hover i {
 	transform: scale(1.3);
-	color: var(--brand-blue-p1);
+	color: var(--light-shade);
 }
 
 .social-btn::before {
@@ -657,7 +658,7 @@ footer {
 	position: absolute;
 	width: 120%;
 	height: 120%;
-	background: var(--brand-blue-m2);
+	background: var(--primary-dark);
 	transform: rotate(45deg);
 	left: -110%;
 	top: 90%;
@@ -732,7 +733,7 @@ footer {
 
 .search-label {
 	margin: 0 !important;
-	padding-left: 10px;
+	padding: 3px 3px 3px 10px;
 	width: 100%;
 	background: var(--brand-blue-p1);
 	color: var(--light-shade-m1) !important;
@@ -771,14 +772,15 @@ footer {
 	opacity: 0.95;
 	color: var(--light-shade);
 	margin-top: -2em;
+	font-size: 26px;
 }
 
 .btn-404 {
 	margin-top: 1em;
 	padding: 15px;
 	width: 200px;
-	color: var(--light-shade-m1);
-	background-color: var(--brand-blue-p2);
+	color: var(--secondary-light);
+	background-color: var(--light-shade-m1);
 	border: 0;
 	transition: ease-in 0.2s;
 }
@@ -928,8 +930,8 @@ button:focus {
 }
 
 .overlay {
-	background: var(--brand-blue-m2);
-	background: linear-gradient(to right, var(--brand-blue-m2), var(--brand-blue));
+	background: #0258c3;
+	background: linear-gradient(to right, #0258c3, #0450af);
 	color: var(--light-shade-m1);
 	position: relative;
 	left: -100%;
@@ -1125,7 +1127,7 @@ div.carousel-item.active {
 }
 
 .blog-title a {
-	font-size: 24px;
+	font-size: 32px;
 	font-weight: bold;
 	color: var(--brand-blue);
 	text-decoration: none;
@@ -1154,7 +1156,7 @@ div.carousel-item.active {
 	transition: ease-in-out 0.3s;
 }
 .blog-btn:hover {
-	background-color: var(--brand-blue-p2);
+	background-color: var(--interactive-color);
 }
 
 .blog-overlay h4 {
@@ -1207,6 +1209,7 @@ div.carousel-item.active {
 
 .blog-overlay-wrapper img {
 	max-width: 100%;
+	max-height: 70vh;
 }
 
 .blog-overlay-wrapper:hover .blog-overlay {
@@ -1415,16 +1418,16 @@ div.carousel-item.active {
 	width: 100%;
 	height: 50px;
 	border: none !important;
-	background: linear-gradient(160deg, var(--interactive-color), var(--interactive-color-p1));
+	background: linear-gradient(160deg, var(--interactive-color-m1), var(--interactive-color));
 	color: var(--light-shade);
 	outline: none;
 	cursor: pointer;
-	transition: 0.3s ease-in;
-	opacity: 1;
+	transition: 0.1s ease-in;
+	opacity: 0.9;
 }
 
 .submit-btn:hover {
-	opacity: 0.9;
+	opacity: 1;
 }
 
 .call-btn {
@@ -1538,13 +1541,6 @@ div.carousel-item.active {
 	grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
 }
 
-.gallery-mode {
-	background-color: var(--brand-blue-p2) !important;
-	box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
-	-webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-	-moz-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
-}
-
 .pwinty-wrapper {
 	display: grid;
 	grid-template-columns: repeat(3, minmax(200px, 1fr));
@@ -1626,7 +1622,7 @@ a.lightbox-close {
 
 /* Uses the :target pseudo-class to perform the animations upon clicking the .lightbox-target anchor */
 .lightbox-target:target {
-	z-index: 41;
+	z-index: 9999;
 	opacity: 1;
 	top: 0;
 	bottom: 0;
@@ -1799,7 +1795,7 @@ input:-webkit-autofill:focus,
 textarea:-webkit-autofill:focus,
 select:-webkit-autofill:focus {
 	outline: none !important;
-	border: 2px solid var(--brand-blue-m1) !important;
+	border: 2px solid var(--brand-blue-m2) !important;
 }
 
 /* Change Autocomplete styles in Chrome*/
@@ -1858,6 +1854,8 @@ select:-webkit-autofill {
 	color: var(--light-shade-p1);
 	display: flex;
 	justify-content: space-between;
+	background: var(--brand-blue-m2);
+	padding: 10px 20px;
 }
 
 .payment-div b {
@@ -2288,7 +2286,12 @@ tbody tr:hover {
 	-moz-column-count: 3;
 	-moz-column-gap: 0px;
 	column-count: 3;
-	column-gap: 0px;
+	grid-gap: 10px;
+	margin-top: 10px;
+}
+
+#original .card {
+	margin: 0;
 }
 
 #container-shop .expandable-card {
@@ -2486,7 +2489,7 @@ tbody tr:hover {
 
 .admin-section-block {
 	display: block;
-	background: var(--brand-blue-p2);
+	background: var(--secondary-light);
 	color: var(--light-shade);
 	font-size: 36px;
 	padding: 40px 10px;
@@ -2833,6 +2836,9 @@ tbody tr:hover {
 	.container {
 		padding: 0px;
 	}
+	#container-login .container {
+		margin-bottom: 0;
+	}
 	.form-container {
 		padding: 10px !important;
 	}
@@ -2856,7 +2862,7 @@ tbody tr:hover {
 /* Large devices (desktops, 992px and up) */
 @media (max-width: 992px) {
 }
-/* Extra large devices (large desktops,  1200px and up) */
+/* Extra large devices (large desktops, 1200px and up) */
 @media (max-width: 1200px) {
 }
 
