--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -1,24 +1,39 @@
 <% include partials/head %>
 
 <div class="full-container">
-	<div class="container container-front">
+	<div class="container">
+		<div class="col-md-10 offset-md-1 p-0">
+			<div class="text-center">
+				<b class="alertEmpty text-center <% if (locals.totalPrice !== '0' && locals.totalPrice != '0.00') { %>nodisplay<% } %>" id="alertEmpty">Your cart is empty!</b>
+			</div>
+		</div>
 		<% if(locals.products && locals.totalPrice != 0 && locals.totalQty != 0){ %>
 		<div class="col-md-10 offset-md-1 p-0">
 			<h1 class="square-title text-center">Your Cart</h1>
 
 			<% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
-			<div class="col-md-12 mt-3 mb-3 payment-div">
+			<div class="cart-row" id="cart-row-header">
+				<% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
+				<span class="cart-item cart-header cart-column">Shipping - <%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</span>
+				<% } else { %>
+				<span class="cart-item cart-header cart-column">Shipping - FREE</span>
+				<% } %>
+				<span class="cart-quantity cart-header cart-column"><%= locals.totalQty %></span>
+				<span class="cart-price cart-header cart-column"><%= locals.totalPrice %>€</span>
+			</div>
+			<!--
+			<div class="col-md-12 mt-3 payment-div">
 				<span id="total-price-span">Total Price - <b id="total-price"><%= locals.totalPrice %>€</b></span>
 				<span id="total-qty-span">Total Quantity - <b id="total-qty"><%= locals.totalQty %></b></span>
 				<% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
-				<span id="delivery-price-span">Shipping Price - <b id="delivery-price"> <%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</b></span>
+				<span id="delivery-price-span">Shipping - <b id="delivery-price"> <%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</b></span>
 				<% } else { %>
-				<span id="delivery-price-span">Shipping Price - <b id="delivery-price">FREE</b></span>
+				<span id="delivery-price-span">Shipping - <b id="delivery-price">FREE</b></span>
 				<% } %>
-			</div>
+			</div>-->
 			<% } %>
 
-			<div class="cart-row mt-2" id="cart-row-header">
+			<div class="cart-row" id="cart-row-header">
 				<span class="cart-item cart-header cart-column">ITEM</span>
 				<span class="cart-quantity cart-header cart-column">QUANTITY</span>
 				<span class="cart-price cart-header cart-column">PRICE</span>
@@ -74,13 +89,7 @@
 </div>
 
 <div class="full-container even" id="container-cart">
-	<div class="container container-front">
-		<div class="col-md-10 offset-md-1 p-0">
-			<div class="text-center">
-				<b class="alertEmpty text-center <% if (locals.totalPrice !== '0' && locals.totalPrice != '0.00') { %>nodisplay<% } %>" id="alertEmpty">Your cart is empty!</b>
-			</div>
-		</div>
-
+	<div class="container">
 		<div class="col-md-10 offset-md-1 p-0">
 			<h1 class="square-title text-center">Delivery Informations</h1>
 			<div class="alert alert-info alert-static w-100 mb-3" role="alert">Make sure these informations are correct, if not <a href="/User" target="_blank">change your delivery address</a></div>
