--- a/views/Galerie.ejs
+++ b/views/Galerie.ejs
@@ -1,37 +1,44 @@
 <% include partials/head %>
 
 <script src="/scripts/cart.js"></script>
-<div class="container gallery-mode">
-	<div class="container-gallery" id="container-gallery">
-		<% if (locals.galleries){ %> <% Object.keys(locals.galleries).forEach(function (index) { %>
-		<div class="expandable-card" id="<%= locals.galleries[index]._id %>">
-			<div class="face face1 blog-overlay-wrapper mt-0">
-				<a href="#expand">
-					<img src="/api/image/<%= locals.galleries[index].mainImgId %>" class="w-100 expandable" alt="Gallery Image - <%= locals.galleries[index].title %>" />
-				</a>
 
-				<div class="blog-overlay expandable" data-id="<%= locals.galleries[index]._id %>" data-isGallery="true">
-					<h4>
-						<i><a href="/Galerie/<%= locals.galleries[index]._id %>"><%= locals.galleries[index].shorttitle %></a></i>
-					</h4>
-					<div class="gallery-tags mt-2">
-						<% locals.galleries[index].tags.forEach(function (tag) { %>
-						<a href="/Galerie/Tags?t=<%= tag %>">#<%= tag %></a>
-						<% }) %>
+<div class="full-container">
+	<div class="container">
+		<h1 class="square-title text-center">Art Gallery</h1>
+		<div class="alert alert-info alert-static w-100" role="alert">
+			Reproductions of these paintings are available for sale by clicking on the "See more" button
+		</div>
+		<div class="container-gallery mt-3" id="container-gallery">
+			<% if (locals.galleries){ %> <% Object.keys(locals.galleries).forEach(function (index) { %>
+			<div class="expandable-card" id="<%= locals.galleries[index]._id %>">
+				<div class="face face1 blog-overlay-wrapper mt-0">
+					<a href="#expand">
+						<img src="/api/image/<%= locals.galleries[index].mainImgId %>" class="w-100 expandable" alt="Gallery Image - <%= locals.galleries[index].title %>" />
+					</a>
+
+					<div class="blog-overlay expandable" data-id="<%= locals.galleries[index]._id %>" data-isGallery="true">
+						<h4>
+							<i><a href="/Galerie/<%= locals.galleries[index]._id %>"><%= locals.galleries[index].shorttitle %></a></i>
+						</h4>
+						<div class="gallery-tags mt-2">
+							<% locals.galleries[index].tags.forEach(function (tag) { %>
+							<a href="/Galerie/Tags?t=<%= tag %>">#<%= tag %></a>
+							<% }) %>
+						</div>
+						<form action="/Galerie/<%= locals.galleries[index]._id %>"><button class="blog-btn">See More</button></form>
 					</div>
-					<form action="/Galerie/<%= locals.galleries[index]._id %>"><button class="blog-btn">See More</button></form>
 				</div>
 			</div>
+			<% }) %> <% } else { %>
+			<div class="text-center bwhite">
+				<h1>Gallery page is under maintenance, please come back later</h1>
+			</div>
+			<% } %>
 		</div>
-		<% }) %> <% } else { %>
-		<div class="text-center bwhite">
-			<h1>Gallery page is under maintenance, please come back later</h1>
+		<div class="col-md-6 offset-md-3 mt-3">
+			<img alt="loader gif animation" id="loader" src="/img/loader.gif" />
+			<input id="infinitebtn" type="submit" class="submit-btn" value="Load more" />
 		</div>
-		<% } %>
-	</div>
-	<div class="col-6 offset-3 mb-3 mt-3">
-		<img alt="loader gif animation" id="loader" src="/img/loader.gif" />
-		<input id="infinitebtn" type="submit" class="logbtn" value="Load more" />
 	</div>
 </div>
 
