--- a/views/User.ejs
+++ b/views/User.ejs
@@ -59,7 +59,7 @@
 								<span id="i_password" class="form-info"><b>Password</b> must contain between <b>8 and 256 characters</b> and has to be atleast <b>alphanumeric</b></span>
 							</div>
 						</div>
-						<div class="col-md-12">
+						<div class="col-md-12 p-0">
 							<label class="control-label">Password <i>(confirm)</i></label>
 						</div>
 
@@ -74,18 +74,13 @@
 						</div>
 						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 					</form>
-
-					<div class="row">
-						<div class="col-md-12 text-center">
-							<label class="control-label mt-4">DELETE YOUR ACCOUNT</label>
-							<input type="submit" data-id="<%= locals.user._id %>" class="logbtn cancelbtn w-100" value="DELETE PERMANENTLY" />
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
+
+
 
 <div class="full-container even" id="container-delivery">
 	<div class="container container-front">
@@ -220,9 +215,24 @@
 		</div>
 	</div>
 
-	<script src="/scripts/user.js" defer></script>
+	
+</div>
+
+<div class="full-container even">
+	<div class="container container-front">
+		<h1 class="square-title">DELETE YOUR ACCOUNT</h1>
+		<div class="col-md-10 offset-md-1">
+		<div class="row">
+						<div class="col-md-12 text-center">
+							
+							<input type="submit" data-id="<%= locals.user._id %>" class="submit-btn cancelbtn w-100" value="DELETE PERMANENTLY" />
+						</div>
+					</div>
+	</div></div>
+</div>
+
+<script src="/scripts/user.js" defer></script>
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEBWHg2gKU3uMKQWSvn4yXWV5RavPm1PU&libraries=places&callback=initAutocomplete" async defer></script>
 	<script src="/scripts/core/auto-complete.js"></script>
 	<script src="/scripts/core/frontValidation.js" defer></script>
 	<% include partials/footer %>
-</div>
