--- a/public/style.css
+++ b/public/style.css
@@ -505,6 +505,15 @@ header:hover .navbar-container .navbar-custom .nav-links #cart-qty-li a {
 	background-color: var(--brand-blue-p2);
 }
 
+#cart-row-top {
+	background-color: var(--brand-blue-p2);
+}
+
+#cart-row-top span {
+	color: var(--light-shade-m1);
+	font-size: 23px;
+}
+
 #cartQty {
 	font-weight: bold;
 	color: var(--primary-dark);
@@ -1147,7 +1156,7 @@ div.carousel-item.active {
 	background-color: var(--brand-blue-m2);
 	color: var(--light-shade-m1);
 	border: 0;
-	line-height: normal;
+	line-height: unset;
 
 	bottom: 5%;
 	left: 50%;
@@ -1157,6 +1166,10 @@ div.carousel-item.active {
 }
 .blog-btn:hover {
 	background-color: var(--interactive-color);
+}
+
+#container-gallery .blog-btn {
+	line-height: normal;
 }
 
 .blog-overlay h4 {
@@ -1192,7 +1205,7 @@ div.carousel-item.active {
 }
 
 .blog-no-overlay-wrapper {
-	padding: 10px 20px 20px 20px;
+	padding: 5px 50px 35px 50px;
 }
 
 .blog-no-overlay p {
@@ -1748,7 +1761,7 @@ a.lightbox-close {
 }
 
 .tags-wrapper a {
-	color: var(--interactive-color-m1);
+	color: var(--brand-blue);
 	font-size: 22px;
 	text-decoration: none;
 }
@@ -1851,15 +1864,15 @@ select:-webkit-autofill {
 .payment-div {
 	font-weight: bold;
 	font-size: 20px;
-	color: var(--light-shade-p1);
+	color: var(--light-shade);
 	display: flex;
 	justify-content: space-between;
-	background: var(--brand-blue-m2);
+	background: transparent;
 	padding: 10px 20px;
 }
 
 .payment-div b {
-	font-size: 24px;
+	font-size: 2.25rem;
 	color: var(--light-shade-m1);
 }
 
