--- a/views/About.ejs
+++ b/views/About.ejs
@@ -4,7 +4,7 @@
 
 <div class="full-container">
 	<div class="container container-front">
-		<h1 class="square-title text-center mb-3">My blog posts</h1>
+		<h1 class="square-title text-center mb-3">Blog Tickets</h1>
 		<div class="container container-blog h-100 p-0 m-0">
 			<div class="col-md-12 wrapper p-0" id="container-blog">
 				<% if (locals.blogs){ %> <% Object.keys(locals.blogs).forEach(function (index) { %>
