--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -4,34 +4,51 @@
 	<div class="container">
 		<div class="col-md-10 offset-md-1 p-0">
 			<div class="text-center">
-				<b class="alertEmpty text-center <% if (locals.totalPrice !== '0' && locals.totalPrice != '0.00') { %>nodisplay<% } %>" id="alertEmpty">Your cart is empty!</b>
+				<b class="square-title text-center <% if (locals.totalPrice !== '0' && locals.totalPrice != '0.00') { %>nodisplay<% } %>" id="alertEmpty">Your cart is empty!</b>
 			</div>
 		</div>
 		<% if(locals.products && locals.totalPrice != 0 && locals.totalQty != 0){ %>
 		<div class="col-md-10 offset-md-1 p-0">
 			<h1 class="square-title text-center">Your Cart</h1>
+			<!-- add no display here when emptying cart-->
 
-			<% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
-			<div class="cart-row" id="cart-row-header">
-				<% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
-				<span class="cart-item cart-header cart-column">Shipping - <%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</span>
-				<% } else { %>
-				<span class="cart-item cart-header cart-column">Shipping - FREE</span>
-				<% } %>
-				<span class="cart-quantity cart-header cart-column"><%= locals.totalQty %></span>
-				<span class="cart-price cart-header cart-column"><%= locals.totalPrice %>€</span>
+			<div id="cart-row-todp">
+				<div class="payment-div">
+					<h3>
+						SHIPPING FEE - <% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %> <b><%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</b> <% } else
+						{ %>
+						<b>FREE</b>
+					</h3>
+					<% } %>
+					<h3>TOTAL QTY - <b><%= locals.totalQty %></b></h3>
+					<h3>TOTAL - <b><%= locals.totalPrice %>€</b></h3>
+				</div>
+				<!--<div class="payment-div">
+					<% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
+					<h4><%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</h4>
+					<% } else { %>
+					<h4>FREE</h4>
+					<% } %>
+					<h4><%= locals.totalQty %></h4>
+					<h4><%= locals.totalPrice %>€</h4>
+				</div>-->
+				<!--
+				<div class="cart-row">
+					<span class="cart-item cart-header cart-column">SHIPPING FEE</span>
+					<span class="cart-quantity cart-header cart-column">TOTAL QTY</span>
+					<span class="cart-price cart-header cart-column">TOTAL €</span>
+				</div>
+				<div class="cart-row">
+					<% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
+					<span class="cart-item cart-header cart-column"><%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</span>
+					<% } else { %>
+					<span class="cart-item cart-header cart-column">FREE</span>
+					<% } %>
+					<span class="cart-quantity cart-header cart-column"><%= locals.totalQty %></span>
+					<span class="cart-price cart-header cart-column"><%= locals.totalPrice %>€</span>
+				</div>
+				-->
 			</div>
-			<!--
-			<div class="col-md-12 mt-3 payment-div">
-				<span id="total-price-span">Total Price - <b id="total-price"><%= locals.totalPrice %>€</b></span>
-				<span id="total-qty-span">Total Quantity - <b id="total-qty"><%= locals.totalQty %></b></span>
-				<% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
-				<span id="delivery-price-span">Shipping - <b id="delivery-price"> <%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</b></span>
-				<% } else { %>
-				<span id="delivery-price-span">Shipping - <b id="delivery-price">FREE</b></span>
-				<% } %>
-			</div>-->
-			<% } %>
 
 			<div class="cart-row" id="cart-row-header">
 				<span class="cart-item cart-header cart-column">ITEM</span>
@@ -82,7 +99,18 @@
 				</div>
 			</div>
 
-			<% }) %>
+			<% }) %> <% if (locals.totalPrice != 0 && locals.totalQty != 0) { %> <% } %>
+
+			<div class="payment-div">
+				<h3>
+					SHIPPING FEE - <% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %> <b><%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</b> <% } else {
+					%>
+					<b>FREE</b>
+				</h3>
+				<% } %>
+				<h3>TOTAL QTY - <b><%= locals.totalQty %></b></h3>
+				<h3>TOTAL - <b><%= locals.totalPrice %>€</b></h3>
+			</div>
 		</div>
 		<% } %>
 	</div>
