--- a/views/single/Order-recap.ejs
+++ b/views/single/Order-recap.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/head %>
 
 <div class="full-container" id="container-cart">
-	<div class="container container-front">
+	<div class="container">
 		<div class="col-md-10 offset-md-1 p-0">
 			<% if (locals.order.status !== "Cancelled" && locals.order.status !== "Submitted" && locals.order.status !== "Completed" && locals.order.status !== "awaitingStripePayment") { %>
 			<input type="submit" data-id="<%= locals.order._id %>" class="cancelbtn" value="CANCEL ORDER" />
@@ -10,14 +10,15 @@
 
 			<div class="text-center w-100"></div>
 			<div class="payment-div">
-				<h4>Status - <b><%= locals.order.status %></b></h4>
-				<h4>Total Price - <b><%= locals.order.price %>€</b></h4>
+				<h3>STATUS - <b><%= locals.order.status %></b></h3>
 
 				<% if (locals.deliveryPriceFormatted != "0.00") { %>
-				<h4>Shipping - <b><%= locals.deliveryPriceFormatted %>€</b></h4>
+				<h3>SHIPPING FEE - <b><%= locals.deliveryPriceFormatted %>€</b></h3>
 				<% } else { %>
-				<h4>Shipping - <b>FREE</b></h4>
+				<h3>SHIPPING FEE - <b>FREE</b></h3>
 				<% } %>
+
+				<h3>TOTAL - <b><%= locals.order.price %>€</b></h3>
 			</div>
 
 			<% if (locals.order.status === "awaitingStripePayment") { %>
@@ -65,10 +66,9 @@
 </div>
 
 <div class="full-container even" id="container-cart">
-	<div class="container container-front">
+	<div class="container">
 		<div class="col-md-10 offset-md-1 p-0">
 			<h1 class="square-title text-center">Delivery Address</h1>
-			<div class="alert alert-info alert-static w-100 mb-3" role="alert">Make sure these informations are correct, if not <a href="/User">change your delivery address</a></div>
 
 			<div class="row">
 				<div class="col-md-6">
