--- a/views/Catalog.ejs
+++ b/views/Catalog.ejs
@@ -1,20 +1,19 @@
 <% include partials/head %>
 
 <div class="full-container" id="container-landing">
-	<div class="container">
-		<div class="alert alert-warning alert-static w-100 align-left" role="alert">
-			This is the catalog available and it's options to tailour our reproductions to your needs. <br />
-			Simply go to the <a target="_blank" href="/Galerie"><b>Gallery</b></a
-			>, click the <b>"See More" button</b> for the painting you're interested in, and down below you can chose what options you'd like
-		</div>
-		<div class="container-single catalog-wrapper col-md-12 mt-3">
-			<h1 class="catalog-title-category text-center">Categories</h1>
-			<div class="catalog-header-btn mb-4 pt-4">
-				<button id="framed-btn" class="main-btn tab-btn active">Framed Painting</button>
-				<button id="fap-btn" class="main-btn tab-btn">Fine Art Print</button>
-				<button id="canvas-btn" class="main-btn tab-btn">Canvas</button>
+	<h1 class="square-title text-center">Categories</h1>
+	<div class="catalog-header-btn col-md-6 offset-md-3 mb-4 pt-4">
+		<button id="framed-btn" class="main-btn tab-btn active">Framed Painting</button>
+		<button id="fap-btn" class="main-btn tab-btn">Fine Art Print</button>
+		<button id="canvas-btn" class="main-btn tab-btn">Canvas</button>
+	</div>
+	<div class="container mt-0 pt-0">
+		<div class="container-single catalog-wrapper col-md-12">
+			<div class="alert alert-warning alert-static w-100 align-left" role="alert">
+				This is the catalog available and it's options to tailour our reproductions to your needs. <br />
+				Simply go to the <a target="_blank" href="/Galerie"><b>Gallery</b></a
+				>, click the <b>"See More" button</b> for the painting you're interested in, and down below you can chose what options you'd like
 			</div>
-
 			<div class="catalog-category tab col-md-12" id="framed">
 				<div class="row pb-0 m-0">
 					<div class="col-md-6 p-0">
