--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -18,9 +18,9 @@
 					</h5>
 					<p class="card-text gallery-description mb-5"><%= locals.original[index].shortcontent %>...</p>
 					<div class="row shop-price-row mt-4">
-						<div class="shop-price-col col-6">
+						<div class="shop-price-col col-6 pt-2">
 							<b class="card-price"><%= locals.original[index].price %>€</b>
-							<b class="isUnique">Unique Painting</b>
+							<!--<b class="isUnique">Unique Painting</b>-->
 						</div>
 
 						<div class="col-6">
