--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -63,7 +63,7 @@
 						<% } %>
 
 						<li>
-							<a href="/About" class="navbar-text <%= (locals.active && locals.active == 'About') ? 'active' : '' %>">About</a>
+							<a href="/Blog" class="navbar-text <%= (locals.active && locals.active == 'About') ? 'active' : '' %>">Blog</a>
 						</li>
 
 						<li>
