--- a/views/About.ejs
+++ b/views/About.ejs
@@ -12,7 +12,7 @@
 					<div class="container m-0">
 						<div class="blog-row" id="<%= locals.blogs[index]._id %>">
 							<h3 class="blog-title"><a href="/Blog/<%= locals.blogs[index]._id %>"><%= locals.blogs[index].shorttitle %>...</a></h3>
-							<p class="blog-info">
+							<p class="blog-info mb-0">
 								uploaded by <b class="blog-author"><%= locals.blogs[index].author %></b>,
 								<i class="blog-date"><%= locals.blogs[index].date %></i>
 							</p>
@@ -42,10 +42,10 @@
 					<h1>Blog page is under maintenance, please come back later</h1>
 				</div>
 				<% } %>
-				<div class="col-md-6 offset-md-3 mb-3 mt-3">
-					<img alt="gif animation loading" id="loader" src="/img/loader.gif" />
-					<input id="infinitebtn" type="submit" class="submit-btn" value="Load more" />
-				</div>
+			</div>
+			<div class="col-md-6 offset-md-3 mb-3 mt-3">
+				<img alt="gif animation loading" id="loader" src="/img/loader.gif" />
+				<input id="infinitebtn" type="submit" class="submit-btn" value="Load more" />
 			</div>
 		</div>
 	</div>
