--- a/views/home.ejs
+++ b/views/home.ejs
@@ -87,6 +87,7 @@
 					non sans pudeur, seule sœur de ses trois frères.
 				</p>
 			</div>
+			<input type="submit" class="submit-btn call-btn" value="Take me to your Blog" id="goto-blog" />
 		</div>
 	</div>
 </div>
