--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -2,7 +2,7 @@
 
 <div class="anchor-list">
 	<div class="col-md-6 offset-md-3">
-		<ul class="nav-anchor w-100">
+		<ul class="nav-anchor w-100" id="top-menu">
 			<li><a href="#header" class="anchor-text">Log in</a></li>
 			<li><a href="#container-register" class="anchor-text">Sign up</a></li>
 			<li><a href="#container-lostpw" class="anchor-text">Lost password</a></li>
