--- a/views/User.ejs
+++ b/views/User.ejs
@@ -2,8 +2,8 @@
 
 <div class="anchor-list">
 	<div class="col-md-6 offset-md-3">
-		<ul class="nav-anchor w-100">
-			<li><a href="#header" class="anchor-text active">Settings</a></li>
+		<ul class="nav-anchor w-100" id="top-menu">
+			<li><a href="#header" class="anchor-text">Settings</a></li>
 			<li><a href="#container-delivery" class="anchor-text">Delivery</a></li>
 			<li><a href="#container-history" class="anchor-text">History</a></li>
 		</ul>
@@ -215,7 +215,7 @@
 		</div>
 	</div>
 
-	
+
 </div>
 
 <div class="full-container even">
@@ -224,7 +224,7 @@
 		<div class="col-md-10 offset-md-1">
 		<div class="row">
 						<div class="col-md-12 text-center">
-							
+
 							<input type="submit" data-id="<%= locals.user._id %>" class="submit-btn cancelbtn w-100" value="DELETE PERMANENTLY" />
 						</div>
 					</div>
