--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 
 <div class="anchor-list">
 	<div class="col-md-6 offset-md-3">
-		<ul class="nav-anchor w-100">
+		<ul class="nav-anchor w-100" id="top-menu">
 			<li><a href="#header" class="anchor-text active">Home</a></li>
 			<li><a href="#container-bio" class="anchor-text">About</a></li>
 			<li><a href="#container-contact" class="anchor-text">Contact</a></li>
@@ -11,7 +11,7 @@
 	</div>
 </div>
 
-<div class="full-container" id="container-landing">
+<div class="full-container">
 	<div class="container container-front">
 		<div class="carousel-home">
 			<div id="carousel-thumb" class="carousel slide carousel-thumbnails" data-ride="carousel">
@@ -48,12 +48,12 @@
 <div class="full-container even" id="container-bio">
 	<div class="container container-front">
 		<div class="biography wrapper pb-0 pt-4">
-			<div class="bio-img-wrapper col-sm-4 z-0">
+			<div class="bio-img-wrapper col-md-4 z-0">
 				<div class="sub-img-wrapper mt-5">
 					<img alt="Biography Picture - Portrait Image" class="bio-img w-100" src="/img/upload/biopic.png" />
 				</div>
-			</div>
-			<div class="first-bio col-sm-8">
+		</div>
+			<div class="first-bio col-md-8">
 				<h1 class="square-title">Maral Abkarian</h1>
 				<p class="square-txt ml-3">
 					Née durant la seconde moitié du XXème siècle, élevée entre Orient du Levant et Occident tricolore, établie sur trois continents, Maral a dans la continuité de ses ancêtres déracinés de leur
