--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -119,4 +119,4 @@
 		<% }) %> <% }) %> <% } %>
 	</body>
 </html>
-<script src="/scripts/core/navbar.js"></script>
+<script src="/scripts/core/navbar.js" defer></script>
